# hox

./: .gitignore  CLAUDE.md  Cargo.toml  LOGGING_AUDIT_INDEX.md  LOGGING_INVENTORY_SUMMARY.txt  LOGGING_METRICS_INVENTORY.md  LOGGING_QUICK_REFERENCE.md  PHASE2_IMPLEMENTATION_SUMMARY.md  README.md  RUST_TYPES_PORT.md
.github/workflows/: claude-code-review.yml  claude.yml
crates/bd-cli/: Cargo.toml
crates/bd-cli/src/: main.rs
crates/bd-core/: Cargo.toml
crates/bd-core/examples/: types_demo.rs
crates/bd-core/src/: error.rs  lib.rs  schema.rs  types.rs
crates/bd-daemon/: Cargo.toml  DASHBOARD.md  IMPLEMENTATION.md  OPLOG_WATCHER.md  README.md
crates/bd-daemon/examples/: daemon_example.rs
crates/bd-daemon/src/: dashboard.rs  lib.rs  oplog.rs
crates/bd-daemon/tests/: oplog_integration.rs
crates/bd-orchestrator/: Cargo.toml
crates/bd-orchestrator/src/: handoff.rs  jj.rs  lib.rs  revsets.rs  task.rs  types.rs
crates/bd-storage/: Cargo.toml
crates/bd-storage/examples/: dep_io_demo.rs
crates/bd-storage/src/: db.rs  dep_io.rs  lib.rs  sync.rs  task_io.rs
crates/bd-storage/tests/: db_test.rs
crates/bd-vcs/: Cargo.toml  README.md
crates/bd-vcs/examples/: test_vcs.rs
crates/bd-vcs/src/: backend.rs  git.rs  jj.rs  lib.rs
crates/hox-agent/: Cargo.toml
crates/hox-agent/src/: artifact_manager.rs  auth.rs  circuit_breaker.rs  client.rs  file_executor.rs  lib.rs  promise.rs  types.rs
crates/hox-browser/: Cargo.toml  README.md
crates/hox-browser/src/: browser.rs  error.rs  lib.rs  screenshot.rs  verification.rs
crates/hox-cli/: Cargo.toml
crates/hox-cli/src/: main.rs
crates/hox-core/: Cargo.toml
crates/hox-core/src/: config.rs  error.rs  fail_open.rs  lib.rs  types.rs
crates/hox-dashboard/: Cargo.toml
crates/hox-dashboard/src/: app.rs  error.rs  event.rs  jj_source.rs  lib.rs  run.rs  state.rs  terminal.rs  ui.rs
crates/hox-dashboard/src/widgets/: agent_graph.rs  agent_table.rs  event_log.rs  metrics_panel.rs  mod.rs
crates/hox-evolution/: Cargo.toml
crates/hox-evolution/src/: lib.rs  patterns.rs  review.rs
crates/hox-jj/: Cargo.toml
crates/hox-jj/src/: bookmarks.rs  command.rs  dag.rs  lib.rs  lib_backend.rs  metadata.rs  oplog.rs  revsets.rs  validate.rs
crates/hox-metrics/: Cargo.toml
crates/hox-metrics/src/: collector.rs  lib.rs  storage.rs
crates/hox-orchestrator/: Cargo.toml
crates/hox-orchestrator/src/: activity_logger.rs  backpressure.rs  communication.rs  conflict_resolver.rs  hooks.rs  lib.rs  loop_engine.rs  loop_external.rs  orchestrator.rs  phases.rs  prompt.rs  recovery.rs  speculative.rs  state_machine.rs  workspace.rs
crates/hox-planning/: Cargo.toml
crates/hox-planning/src/: decomposer.rs  lib.rs  prd.rs  templates.rs
crates/hox-validation/: Cargo.toml
crates/hox-validation/src/: consensus.rs  lib.rs  validator.rs
crates/hox-viz/: Cargo.toml
crates/hox-viz/frontend/: index.html
crates/hox-viz/frontend/css/: style.css
crates/hox-viz/frontend/js/: colors.js  graph.js  hud.js  main.js  nodes.js
crates/hox-viz/src/: assets.rs  lib.rs  server.rs  sse.rs  state.rs
docs/: 2026-01-30-jj-vcs-features-for-agent-parallel-development.md  ENTITY_SEARCH_ANALYSIS.md  HOX_SPECIFICATION.md  Hox specs.md  IMPLEMENTATION_PLAN.md  JJ_DEV_PLAN.md  JJ_FORK_PLAN.md  ORCHESTRATION_PATTERNS_ANALYSIS.md  SELF_EVOLUTION_FRAMEWORK.md  beads-rs v jj-only.md  dep_io_implementation.md  external-loop-mode.md  jj-only.md
examples/: external-loop.sh
specs/: o-hox-upgrade-20260213.md
