[workspace]
members = [
    "crates/bd-core",
    "crates/bd-storage",
    "crates/bd-vcs",
    "crates/bd-daemon",
    "crates/bd-cli",
    "crates/bd-orchestrator",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mike Schirtzinger <155995654+Mschirtzinger@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Mschirtzinger/jj-beads"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Database
turso = { version = "0.4", features = ["sync"] }

# VCS
gix = "0.63"
glob = "0.3"

# Regex
regex = "1.10"

# File watching
notify = "6.1"

# Testing
tempfile = "3.8"

# Internal crates
bd-core = { path = "crates/bd-core" }
bd-storage = { path = "crates/bd-storage" }
bd-vcs = { path = "crates/bd-vcs" }
bd-daemon = { path = "crates/bd-daemon" }
bd-orchestrator = { path = "crates/bd-orchestrator" }
