[workspace]
members = [
    "crates/hox-core",
    "crates/hox-jj",
    "crates/hox-agent",
    "crates/hox-orchestrator",
    "crates/hox-validation",
    "crates/hox-metrics",
    "crates/hox-evolution",
    "crates/hox-planning",
    "crates/hox-cli",
    "crates/hox-browser",
    "crates/hox-dashboard",
    "crates/hox-viz",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mike Schirtzinger <155995654+Mschirtzinger@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Mschirtzinger/hox"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Logging/Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Database (optional, feature-flagged)
turso = { version = "0.4", features = ["sync"] }

# VCS (for reference, Hox uses jj-lib directly)
gix = "0.63"
glob = "0.3"

# Regex
regex = "1.10"

# File watching (for oplog)
notify = "6.1"

# Testing
tempfile = "3.8"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Internal crates
hox-core = { path = "crates/hox-core" }
hox-jj = { path = "crates/hox-jj" }
hox-agent = { path = "crates/hox-agent" }
hox-orchestrator = { path = "crates/hox-orchestrator" }
hox-validation = { path = "crates/hox-validation" }
hox-metrics = { path = "crates/hox-metrics" }
hox-evolution = { path = "crates/hox-evolution" }
hox-planning = { path = "crates/hox-planning" }
hox-browser = { path = "crates/hox-browser" }
hox-dashboard = { path = "crates/hox-dashboard" }
hox-viz = { path = "crates/hox-viz" }

# Web server (for hox-viz)
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
async-stream = "0.3"
mime_guess = "2"
open = "5"
