[package]
name = "bd-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "beads"
path = "src/main.rs"

[dependencies]
bd-core.workspace = true
bd-storage.workspace = true
bd-vcs.workspace = true
bd-daemon.workspace = true
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid = { version = "1.0", features = ["v4"] }
colored = "2"
