[package]
name = "bd-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true
gix.workspace = true

[dev-dependencies]
anyhow.workspace = true
