[package]
name = "bd-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types for JJ-native task orchestration"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
gix.workspace = true

[dev-dependencies]
anyhow.workspace = true
