[package]
name = "bd-orchestrator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true

# Date/Time
chrono.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Async runtime
tokio.workspace = true
async-trait.workspace = true

# Pattern matching
regex.workspace = true

# Logging
tracing.workspace = true

# Internal crates
bd-core.workspace = true

[dev-dependencies]
anyhow.workspace = true
tempfile.workspace = true
