[package]
name = "bd-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bd-core.workspace = true
turso.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
uuid = { version = "1.0", features = ["v4"] }
