[package]
name = "hox-agent"
description = "Anthropic API client and file executor for Hox orchestration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core
hox-core = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Date/Time
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async
tokio = { workspace = true }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = { workspace = true }

# Browser automation for screenshots
headless_chrome = { version = "1.0", optional = true }

[features]
default = []
screenshots = ["headless_chrome"]

[dev-dependencies]
tempfile = { workspace = true }
