[package]
name = "hox-browser"
description = "Browser automation and visual verification for Hox orchestration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core
hox-agent = { workspace = true }
hox-core = { workspace = true }

# Browser automation
headless_chrome = "1.0"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async
tokio = { workspace = true }

# Logging
tracing = { workspace = true }

[features]
default = []

[dev-dependencies]
tempfile = { workspace = true }
