[package]
name = "hox-cli"
description = "Command-line interface for Hox orchestration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "hox"
path = "src/main.rs"

[dependencies]
hox-core = { workspace = true }
hox-jj = { workspace = true }
hox-agent = { workspace = true }
hox-orchestrator = { workspace = true }
hox-validation = { workspace = true }
hox-metrics = { workspace = true }
hox-evolution = { workspace = true }
hox-planning = { workspace = true }
hox-dashboard = { path = "../hox-dashboard" }
hox-viz = { path = "../hox-viz" }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
